Show/Hide Sign In
Added classes to hide sign in after completion and vice-versa

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,1 +1,13 @@
 @import '~bootstrap/scss/bootstrap';
+
+.failure {
+  color: red;
+}
+
+.hidden {
+  display: none;
+}
+
+.success {
+  color: green;
+}
