--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,13 +1,48 @@
 @import '~bootstrap/scss/bootstrap';
 
+body {
+  background: #CFFCF4;
+}
+
 .failure {
   color: red;
+  text-align: center;
+  margin: 40px;
 }
 
 .hidden {
   display: none;
 }
 
+.hide-game {
+  display: none;
+}
+
+#logged-out-view {
+  margin-top: 150px;
+  text-align: center;
+  &sign-up {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+  &sign-in {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+}
+
+.row {
+  background: lightblue;
+  text-align: center;
+  height: 200px;
+}
+
 .success {
   color: green;
+  text-align: center;
+  margin: 40px;
 }
