--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -26,18 +26,18 @@ button {
   margin: 10px;
 }
 
-// #change-password {
+#change-password {
 //   display: flex;
 //   flex-direction: column;
 //   justify-content: flex-end;
 //   align-self: center;
 //   float: right;
 //   margin-top: 20px;
-//   margin-right: 2%;
+  margin-left: 2%;
 //   width: 15%;
 //   min-width: 60px;
 //   align-content: center;
-// }
+}
 
 .display-message {
   position: fixed;
@@ -60,8 +60,18 @@ input {
   background-color: #EEEEEE;
 }
 
+// class for the p tag in gameIndexSuccess
+.index, .game-index-qty {
+  color: #4E5F5B;
+}
+
 h2 {
   font-size: 24px;
+}
+
+h4 {
+  font-size: 20px;
+  color: #4E5F5B;
 }
 
 .hidden {
@@ -129,13 +139,14 @@ input {
 
 #settings {
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   float: right;
   margin-top: 20px;
   margin-right: 2%;
-  width: 10%;
+  width: 12%;
   min-width: 40px;
   align-content: center;
+  text-align: center;
   // position: fixed;
   // top: 0;
   // font-size: 20px;
@@ -160,6 +171,10 @@ input {
   float: right;
   width: 30%;
   margin-right: 10%;
+}
+
+#sign-out {
+  margin-left: 2%;
 }
 
 .success {
